# MM-ShiftKV

./: .gitignore  README.md  pyproject.toml  requirements.txt
csrc/: build.py
lmms_eval/: __main__.py  evaluator.py  hack_transformer.py  hack_transformer12.py  hack_transformer16.py  hack_transformer18.py  hack_transformer20.py  hack_transformer4.py  hack_transformer8.py  hack_transformer_qwenvl2.py
lmms_eval/models/: __init__.py  cambrian.py  llava.py  qwen2_5_vl.py
logs/Qwen__Qwen2.5-VL-7B-Instruct/: 20260106_173159_results.json  20260106_174105_results.json  20260106_174105_samples_ocrbench.jsonl  20260106_174758_results.json  20260106_174758_samples_ocrbench.jsonl  20260108_215119_results.json  20260413_203746_results.json  20260413_210430_results.json  20260414_104117_results.json  20260414_104830_results.json  20260414_110102_results.json  20260414_110924_results.json  20260414_111403_results.json  20260414_111403_samples_ocrbench.jsonl  20260414_112009_results.json  20260414_113408_results.json  20260414_134608_results.json  20260414_135122_results.json  20260414_141352_results.json  20260414_141917_results.json  20260414_144046_results.json  (+1 more)
mmshift/: build_stats_llava_next_multi_dataset.py  build_stats_qwen2vl_multi.py  builder.py  builderread.md  buildmultidataset.py  llama_model.py  mistral_model.py  mmshift_util.py  monkeypatch.py  qwen_model.py  sparsemm_utils.py
mmshift.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/eval/: llava.sh  (+2 more)
speedmemory/: speed_and_memory.py
statistics_table/: layer_statistics_table.json
tools/: __init__.py
(+45 files in other folders)
