[build-system]
requires = ["setuptools", "wheel", "packaging"]
build-backend = "setuptools.build_meta"

[project]
name = "mmshift"
version = "0.0.1"


[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["mmshift"]
extend-exclude = [
    "LLaVA-NeXT",
    "lmms_eval",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["D", "E", "F", "I", "UP"]
ignore = ["D100", "D104", "D105", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"
